Bug 148730 - UI: Unexpected tristate situation in Format -> Paragraph -> Text flow tab
Summary: UI: Unexpected tristate situation in Format -> Paragraph -> Text flow tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-04-22 15:23 UTC by Telesto
Modified: 2022-05-11 14:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-22 15:23:19 UTC
Description:
UI: Unexpected tristate situation in Format -> Paragraph -> Text flow tab

Steps to Reproduce:
1. Open the attached file
2. Place cursor in he yellow area
3. Format -> Paragraph -> Text flow tab
4. Disable Orphan and Window control 
5. Check do not split paragraphs
6. Press OK
7. Format -> Paragraph -> Text flow tab
8. Notice the tri-state
9. Uncheck do not split paragraphs -> still tri-state

Actual Results:
tri-state

Expected Results:
Unchecked


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4659fc2f0a7223a89446edff0b77e58758b5edf5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 1 Heiko Tietze 2022-04-25 10:15:52 UTC
(In reply to Telesto from comment #0)
> 1. Open the attached file

Missing, but not needed. Once "Do not Split" has been applied to the PS Orphan and Widow control become tristate. After unchecking (and applying) "Do not Split" the two options are binary again.

Mike, any idea? Probably an easyhack.
Comment 2 Mike Kaganski 2022-04-25 10:17:38 UTC
(In reply to Heiko Tietze from comment #1)

I'd suspect a regression, which Caolan could be interested to look at. Could you please check?
Comment 3 Heiko Tietze 2022-04-25 13:37:48 UTC
Confirming the behavior with

Version: 7.3.2.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.3.2-2
Calc: threaded
Comment 4 Telesto 2022-04-25 13:52:24 UTC
Also in
Version: 6.0.6.0.0+
Build ID: c30963b8b4bbbe42a24b97aafa161eff9d7ccdd4
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

and in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL

and in
Versie: 4.2.0.4 
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

Ok with
Versie 4.0.0.3 (Bouw-id: 7545bee9c2a0782548772a21bc84a9dcc583b89)
Comment 5 raal 2022-05-10 19:32:35 UTC
This seems to have begun at the below commit.
Adding Cc: to Olivier Hallot; Could you possibly take a look at this one?
Thanks
 3cf51b1a45feb45e79dd0cec2b1d39577de11227 is the first bad commit
commit 3cf51b1a45feb45e79dd0cec2b1d39577de11227
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Fri Sep 18 10:33:34 2015 +0800

    source-hash-f54e175eb903af9fd7c7fc38ef09b203310ec5ae
    
    commit f54e175eb903af9fd7c7fc38ef09b203310ec5ae
    Author:     Olivier Hallot <olivier.hallot@alta.org.br>
    AuthorDate: Sat Feb 16 10:10:34 2013 -0200
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Mon Feb 18 14:59:30 2013 +0000
    
        Widget UI for Text Flow tab page
    
        * Need to address help for the page
    
        Conflicts:
            cui/UI_cui.mk
    
        Change-Id: I7e4d9c9827ba80986059ff628d02f798eabbb4f6
        Reviewed-on: https://gerrit.libreoffice.org/2184
        Reviewed-by: Caolán McNamara <caolanm@redhat.com>
        Tested-by: Caolán McNamara <caolanm@redhat.com>
Comment 6 Telesto 2022-05-11 07:32:07 UTC
@Caolan,
You might take an interest in this one, it's about dialog stuff
Comment 7 Caolán McNamara 2022-05-11 11:40:23 UTC
probably makes sense to set the widow/orphan state from the para properties even if the do not split is active
Comment 8 Commit Notification 2022-05-11 14:21:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a66e2231c15321835e34469edb748947d6de3464

tdf#148730 set current widow/orphan state even if do not split para is set

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2022-05-11 14:21:46 UTC
that seems to do something more pleasing