tdf#148730 set current widow/orphan state even if do not split para is set

Change-Id: Ibdb6a830ad502cf04598ce9cd1c232ad6d9d8ade